--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,12 @@ body {
   flex-wrap: wrap;
   align-items: center;
 }
-.flex-container .flex-item {
+
+.flex-item {
   flex: auto;
 }
-.flex-container .flex-row {
+
+.flex-row {
   display: flex;
   flex-wrap: nowrap;
   font-size: 16px;
@@ -112,11 +114,49 @@ header p {
   background-color: rgb(245, 237, 255);
 }
 
+.img-box {
+  border-radius: 20px 20px 20px 20px;
+  background-color: white;
+  margin: 2%;
+  box-shadow: 0 4px 8px 0 rgba(112, 110, 110, 0.2);
+}
+
+#restaurants {
+  padding: 20px;
+}
+#restaurants img {
+  height: 150px;
+  border-radius: 20px 20px 0px 0px;
+  width: 100%;
+  object-fit: cover;
+}
+#restaurants .flex-item {
+  flex: 0%;
+}
+#restaurants .flex-row {
+  padding: 0 5%;
+}
+#restaurants .description-flex-item {
+  flex: 90%;
+}
+#restaurants .icon-flex-item {
+  flex: 10%;
+}
+#restaurants .bi-heart-fill {
+  display: none;
+}
+#restaurants a:hover .bi-heart-fill {
+  display: inline-block;
+  background-color: linear-gradient(#FF79DA, #9356DC);
+}
+#restaurants a:hover .bi-heart {
+  display: none;
+}
+#restaurants h3 {
+  margin-bottom: 0;
+}
+
 @media only screen and (max-width: 768px) {
-  .flex-item {
-    flex: 100%;
-    text-align: center;
-  }
   body {
     font-size: 16px;
   }
@@ -124,7 +164,8 @@ header p {
     padding: 20px 0 0px 0;
   }
   header .flex-item {
-    width: 100%;
+    flex: 100%;
+    text-align: center;
   }
   header img {
     padding-bottom: 10px;
@@ -156,6 +197,9 @@ header p {
   }
   #fonctioning .pill-corner {
     width: 100%;
+  }
+  #restaurants .flex-item {
+    flex: 100%;
   }
 }
 
