--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,10 @@
     max-width: 1500px;
     margin: auto;
   }
+
+  p {
+    font-weight: 100;
+  }
   
   .flex-container {
     display: flex;
@@ -40,7 +44,7 @@
   header {
     padding: 30px 40px 20px 40px;
 
-    .logo {
+    .header--logo {
         width: 70%;
     }
 
@@ -59,11 +63,16 @@
         text-decoration-color: #575757;
     }
   }
+
+  button {
+    box-shadow: 0 4px 8px 4px rgba(129, 128, 128, 0.2);
+  }
   
   #reserve {
     border-top: 1px solid #575757;
     background-color: $color-quaternary;
     padding-bottom: 30px;
+
     h1, p {
         text-align: center;
     }
@@ -80,6 +89,11 @@
         border-radius: 30px;
         border: none;
         background-image: linear-gradient($color-secondary, $color-primary);
+
+        &:hover {
+            opacity: 0.8;
+           
+        }
     }
   }
 
@@ -137,12 +151,13 @@
   .img-box {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    margin: 2%;
-    box-shadow: 0 4px 8px 0 rgba(112, 110, 110, 0.2);
+    margin: 2% 1%;
+    box-shadow: 0 4px 8px 0 rgba(129, 128, 128, 0.2);
   }
 
   #restaurants {
     padding: 20px;
+    background-color: $color-quaternary;
 
     img {
     height: 150px;
@@ -169,25 +184,50 @@
 
     .bi-heart-fill {
         display: none;
+        transition: background-color 5s ease;
     }
 
     a:hover {
-        .bi-heart-fill {
-            display: inline-block;
-            background-color: linear-gradient($color-secondary, $color-primary);
-        }
         .bi-heart {
             display: none;
         }
+        .bi-heart-fill {
+            display: inline-block;
+            background-color: (linear-gradient(to right, $color-secondary, $color-primary));
+        } 
     }
 
     h3 {
         margin-bottom: 0;
     }
+
+    p {
+        margin-top: 2%;
+    }
   }
 
+  footer {
+    padding: 30px 40px 20px 40px;
+    background-color: rgba(53,53,53,255);
+
+    img {
+        filter: invert(100%);
+    }
+
+    div {
+        margin: 10px 0 0 0;
+    }
+
+    a {
+        color: white;
+    }
+  }
 
   @media only screen and (max-width: 768px) {
+    .flex-item {
+        flex: 100%;
+    }
+
     body {
       font-size: 16px;     
     }
@@ -245,6 +285,21 @@
     #restaurants {
         .flex-item {
             flex: 100%;
+        }
+
+        .img-box {
+            margin: 3% 0;
+
+            &:first-child {
+                margin: 0 0 3% 0;
+            }
+            &:last-child {
+                margin: 3% 0 10% 0;
+            }
+        }
+
+        img {
+            height: 200px;
         }
     }
 }
