--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,57 @@
     max-width: 1500px;
     margin: auto;
   }
+  
+  #loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .loader {
+    position: fixed;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #061016;
+    width: 100px;
+    height: 100px;
+    animation: spin 2s;
+    opacity: 0;
+    top: 100px;
+  }
+
+  @keyframes spin {
+    0% { 
+        transform: rotate(0deg);
+        opacity: 0; 
+    }
+
+    50% {
+        opacity: 1; 
+    }
+    100% { 
+        transform: rotate(360deg);
+        opacity: 0;
+     }
+  }
+
+  header, main, footer {
+    opacity: 0;
+  }
+
+  @keyframes fadein {
+    0% { 
+        opacity: 0; 
+    }
+    100% { 
+        opacity: 1;
+     }
+  }
+
+  header, main, footer {
+    animation: fadein .5s ease-in 2s;
+    animation-fill-mode: forwards;
+  }
 
   p {
     font-weight: 100;
@@ -72,6 +123,7 @@
     border-top: 1px solid #575757;
     background-color: $color-quaternary;
     padding-bottom: 30px;
+    z-index: 0;
 
     h1, p {
         text-align: center;
@@ -92,7 +144,7 @@
 
         &:hover {
             opacity: 0.8;
-           
+            box-shadow: 0 4px 8px 4px rgba(77, 77, 77, 0.2);      
         }
     }
   }
@@ -182,27 +234,57 @@
         flex: 10%;
     }
 
+    i {
+        font-size: 22px;
+    }
+
     .bi-heart-fill {
         display: none;
-        transition: background-color 5s ease;
+        opacity: 0;    
+        transition: all .5s ease-in-out;  
     }
 
     a:hover {
         .bi-heart {
             display: none;
-        }
+        } 
         .bi-heart-fill {
             display: inline-block;
-            background-color: (linear-gradient(to right, $color-secondary, $color-primary));
-        } 
+        }
+    }
+
+    .bi-heart-fill:hover {
+        color: (linear-gradient(to right, $color-secondary, $color-primary));
+        opacity: 1;
     }
 
     h3 {
         margin-bottom: 0;
+        margin-top: 5%;
     }
 
     p {
         margin-top: 2%;
+    }
+
+    .img-box {
+        position: relative;
+        z-index: 0;
+
+        button {
+            border: none;
+            background-color: $color-tertiary;
+            color: rgba(19,146,115,255);
+            padding: 5px 10px;
+            border-radius: 3px;
+        }
+    }
+
+    .new-tag {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        z-index: 1;
     }
   }
 
@@ -299,7 +381,7 @@
         }
 
         img {
-            height: 200px;
+            height: 180px;
         }
     }
 }
