--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ button {
 }
 
 .article--img-box {
-  border-radius: 20px 20px 20px 20px;
+  border-radius: 20px;
   background-color: white;
   margin: 2% 1%;
   box-shadow: 0 4px 8px 0 rgba(129, 128, 128, 0.2);
@@ -376,51 +376,182 @@ footer a {
 }
 
 .menu__article {
-  position: fixed;
+  position: relative;
   border-radius: 30px 30px 0 0;
-  margin: -50px 0 0px 0px;
+  margin: -50px 0 0 0;
+  padding-bottom: 80px;
   background-color: rgb(246, 246, 246);
   width: 100%;
   z-index: 0;
 }
-.menu__article .article__h1 {
+.menu__article .flex-row {
+  align-items: flex-end;
+}
+
+.article__h1 {
   flex: 85%;
-  align-items: center;
 }
-.menu__article .article--heart-icon {
-  flex: 15%;
-  margin-bottom: -10px;
-}
-.menu__article h1 {
+.article__h1 h1 {
   margin: 30px 20px 0 20px;
   font-family: "Shrikhand", sans-serif;
   font-size: 25px;
 }
-.menu__article .heart-icon {
-  font-size: 20px;
-  position: fixed;
+
+.article--heart-icon {
+  flex: 15%;
 }
-.menu__article h2 {
+.article--heart-icon .heart-icon {
+  font-size: 20px;
+}
+
+h2 {
+  position: relative;
   font-size: 14px;
   font-weight: 400;
   margin: 10px;
 }
-.menu__article hr {
-  width: 40px;
+
+hr {
+  width: 30px;
   border: 2px solid #99E2D0;
   color: #99E2D0;
+  position: absolute;
+  left: 20px;
+  margin: -4px 0 0 0;
 }
-.menu__article .menu--starter {
+
+.menu--courses {
   margin: 20px 10px 10px 10px;
 }
-.menu__article .dish-box {
-  height: 60px;
-  border-radius: 20px;
+.menu--courses .flex-item {
+  flex: 0%;
+}
+
+.button__submit {
+  text-align: center;
+  margin: 50px 0 0 0;
+}
+
+.button--order {
+  color: white;
+  height: 50px;
+  padding: 0 20px;
+  border-radius: 30px;
+  border: none;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  padding: 0 50px;
+}
+.button--order:hover {
+  opacity: 0.8;
+  box-shadow: 0 4px 8px 4px rgba(77, 77, 77, 0.2);
+}
+
+.dish-box {
+  height: 75px;
+  border-radius: 15px;
   background-color: white;
-  box-shadow: 0 4px 8px 4px rgba(129, 128, 128, 0.2);
+  box-shadow: 0 0 8px 0 rgba(129, 128, 128, 0.2);
+  margin-top: 25px;
+  overflow: hidden;
+  opacity: 0;
+}
+.dish-box h3 {
+  margin: 14px 5px 6px 10px;
+  font-weight: 500;
+  font-size: 18px;
+  width: 100%;
+  height: 20px;
+  overflow: hidden;
+}
+.dish-box p {
+  margin: 0 5px 0 10px;
+  font-size: 15px;
+  width: 100%;
+  height: 17px;
+  overflow: hidden;
+}
+.dish-box .check-button {
+  display: none;
+  border: none;
+  border-radius: 0 15px 15px 0;
+  height: 75px;
+  width: 100px;
+  background-color: #99E2D0;
+}
+.dish-box .check-button .bi-check-lg {
+  color: #99E2D0;
+  border-radius: 50%;
+  padding: 4px 5px;
+  margin-bottom: 30px;
+  background-color: white;
+}
+.dish-box .flex-row {
+  align-items: flex-end;
+}
+.dish-box .flex-item-left {
+  flex: 85%;
+}
+.dish-box .flex-item-right {
+  flex: 15%;
+}
+.dish-box .flex-item-right p {
+  font-weight: 500;
+}
+.dish-box .dish-desc:hover .desc-flex-item {
+  flex: auto;
+}
+.dish-box .dish-desc:hover .flex-item-left {
+  flex: 80%;
+  padding-bottom: 18px;
+}
+.dish-box .dish-desc:hover .flex-item-right {
+  flex: 20%;
+  padding-bottom: 18px;
+}
+.dish-box .dish-desc:hover .icon-block {
+  display: inline-block;
+  animation: turn 0.5s;
+}
+.dish-box .dish-desc:hover .check-button {
+  display: inline-block;
+  animation: slide 0.5s;
+}
+@keyframes slide {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+@keyframes turn {
+  0% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes slideIn-Y {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+.dish-box {
+  animation: slideIn-Y 1s;
+  animation-fill-mode: forwards;
 }
 
 @media only screen and (max-width: 768px) {
+  .menu__article .menu--courses .flex-item {
+    flex: 100%;
+  }
   .menu__header {
     padding: 30px 10px 20px 10px;
   }
