--- a/sass/Sections/home-sections.scss
+++ b/sass/Sections/home-sections.scss
@@ -19,16 +19,10 @@
     }
 
     button {
-        color: white;
-        height: 50px;
-        padding: 0 20px;
-        border-radius: 30px;
-        border: none;
-        background-image: linear-gradient($color-secondary, $color-primary);
+        @include pill-button;
 
         &:hover {
-            opacity: 0.8;
-            box-shadow: 0 4px 8px 4px rgba(77, 77, 77, 0.2);      
+            @include button-hover; 
         }
     }
   }
